// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel should render 1`] = `
<WithMergedOptions(SidePanel)
  docked={false}
  onToggleDock={[Function]}
/>
`;

exports[`SidePanel should render provided actions as string 1`] = `
<WithMergedOptions(SidePanel)
  actions={
    Array [
      "menu:article",
      "menu:demo",
    ]
  }
  docked={false}
  onToggleDock={[Function]}
/>
`;
